--- a/package.json
+++ b/package.json
@@ -72,10 +72,16 @@
     "@types/react-dom": "^19",
     "@types/three": "^0.182.0",
     "autoprefixer": "^10.4.24",
-    "eslint": "^10.0.0",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "typescript": "5.7.3"
+  },
+  "overrides": {
+    "react-day-picker": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
   }
 }
